--- a/index.html
+++ b/index.html
@@ -13,60 +13,72 @@
 
   <body>
     <header>
-      <img src="./images/perfil.png" alt="Perfil Guillermo Díaz" class="header-img" />
-    <h1 class="header">Guillermo Díaz</h1>
-    <h2 class="subtitle">Front End Developer</h2>
-    <nav>
-      <ul class="navigation">
-        <li class="nav-item"><a href="#">Acerca de</a></li>
-        <li class="nav-item"><a href="#">Mis Proyectos</a></li>
-        <li class="nav-item"><a href="#">Contacto</a> </li>
-      </ul>
-    </nav>
-  </header>
-
-    <div class="intro">
-      Hola! Soy Juliana 👋 Soy Colombo-Canadiense, amo los gatos y tambien crear
-      cosas lindas para la web 😍 Después de estudiar comunicación social y
-      ciencia política en la universidad, trabajé varios años en mercadeo
-      digital hasta que aprendí a programar. Llevo un poco más de tres años
-      enfocándome en front end, específicamente en JavaScript y accesibilidad.
-      Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
-      algunos de mis proyectos recientes y también puedes contactarme por si
-      quieres hablar de tecnología, accesibilidad o gatos!
-      <div class="social-media">
-        <div>
-          <a href="https://twitter.com/gmzjuliana" target="_blank"
-            ><img src="images/twitter.png"
-          /></a>
+      <img
+        src="./images/perfil.png"
+        alt="Perfil Guillermo Díaz"
+        class="header-img"
+      />
+      <h1 class="header">Guillermo Díaz</h1>
+      <h2 class="subtitle">Front End Developer</h2>
+      <nav>
+        <ul class="navigation">
+          <li class="nav-item"><a href="#">Acerca de</a></li>
+          <li class="nav-item"><a href="#">Mis Proyectos</a></li>
+          <li class="nav-item"><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2 class="header">Acerca de</h2>
+        <p class="intro">
+          Hola! Soy Guillermo 👋 WebDev & Systems Engineering student •
+          Passionate about coding, design and digital marketing ✔ • Learning
+          something new everyday 🧠. Aquí puedes ver algunos de mis proyectos
+          recientes y también puedes contactarme por si quieres hablar de
+          tecnología o desarrollo web.
+        </p>
+        <ul class="social-media">
+          <li>
+            <a
+              href="https://twitter.com/diazgdev/"
+              target="_blank"
+              alt="Twitter"
+              ><img src="images/twitter.png"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/diazgdev/" target="_blank" alt="Github"
+              ><img src="images/github-logo.png"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/diazgdev/"
+              target="_blank"
+              alt="LinkedIn"
+              ><img src="images/linkedin.png"
+            /></a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="header">Mis proyectos</h2>
+        <div class="carousel">
+          <div class="arrow arrow-left"></div>
+          <div class="window">
+            <ul class="project-container">
+              <li><button><img class="project project1" src="./images/project1.png" alt="Proyecto 1"></button></li>
+              <li><button><img class="project project2" src="./images/project2.png" alt="Proyecto 2"></button></li>
+              <li"><button><img class="project project3" src="./images/project3.png" alt="Proyecto 3"></button></li>
+              <li"><button><img class="project project4" src="./images/project4.png" alt="Proyecto 4"></button></li=>
+              <li><button><img class="project project5" src="./images/project5.png" alt="Proyecto 5"></button></li>
+            </ul>
+          </div>
+          <div class="arrow arrow-right"></div>
         </div>
-        <div>
-          <a href="https://github.com/gmzjuliana" target="_blank"
-            ><img src="images/github-logo.png"
-          /></a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/gomezjuliana/" target="_blank"
-            ><img src="images/linkedin.png"
-          /></a>
-        </div>
-      </div>
-    </div>
-
-    <div class="carousel">
-      <div class="arrow arrow-left"></div>
-      <div class="window">
-        <div class="project-container">
-          <div class="project project1"></div>
-          <div class="project project2"></div>
-          <div class="project project3"></div>
-          <div class="project project4"></div>
-          <div class="project project5"></div>
-        </div>
-      </div>
-      <div class="arrow arrow-right"></div>
-    </div>
-
+      </section>
+    </main>
     <div class="contact-section">
       <div class="header">Contacto</div>
       <div class="form-container">
