--- a/index.html
+++ b/index.html
@@ -65,26 +65,26 @@
       <section>
         <h2 class="header">Mis proyectos</h2>
         <div class="carousel">
-          <div class="arrow arrow-left"></div>
+          <div class="arrow arrow-left" aria-label="Izquierda"></div>
           <div class="window">
             <ul class="project-container">
               <li><button><img class="project project1" src="./images/project1.png" alt="Proyecto 1"></button></li>
               <li><button><img class="project project2" src="./images/project2.png" alt="Proyecto 2"></button></li>
-              <li"><button><img class="project project3" src="./images/project3.png" alt="Proyecto 3"></button></li>
-              <li"><button><img class="project project4" src="./images/project4.png" alt="Proyecto 4"></button></li=>
-              <li><button><img class="project project5" src="./images/project5.png" alt="Proyecto 5"></button></li>
+              <li><button><img class="project project3" src="./images/project3.png" alt="Proyecto 3"></button></li>
+              <li aria-hidden="true"><button><img class="project project4" src="./images/project4.png" alt="Proyecto 4"></button></li=>
+              <li aria-hidden="true"><button><img class="project project5" src="./images/project5.png" alt="Proyecto 5"></button></li>
             </ul>
           </div>
-          <div class="arrow arrow-right"></div>
+          <div class="arrow arrow-right" aria-label="Derecha"></div>
         </div>
       </section>
     </main>
     <footer class="contact-section">
       <h2 class="header">Contacto</h2>
       <form class="form-container">
-        Nombre<input type="text" /> <br />
-        Correo<input type="text" /> <br />
-        <div class="message-input">Mensaje<input type="text" /> <br /></div>
+        Nombre<input type="text" aria-label="Nombre"/> <br />
+        Correo<input type="text" aria-label="Correo Electrónico"/> <br />
+        <div class="message-input">Mensaje<input type="text" aria-label="Mensaje"/> <br /></div>
         <button class="send-button">Enviar</button>
       </form>
     </footer>
