contraste de color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <img
+      <img 
         src="./images/perfil.png"
         alt="Perfil Guillermo Díaz"
         class="header-img"
@@ -82,9 +82,9 @@
     <footer class="contact-section">
       <h2 class="header">Contacto</h2>
       <form class="form-container">
-        Nombre<input type="text" aria-label="Nombre"/> <br />
-        Correo<input type="text" aria-label="Correo Electrónico"/> <br />
-        <div class="message-input">Mensaje<input type="text" aria-label="Mensaje"/> <br /></div>
+        <label for="Nombre">Nombre</label><input type="text" aria-label="Nombre"/> <br />
+        <label for="Email">Correo electrónico</label><input type="text" aria-label="Correo Electrónico"/> <br />
+        <label for="Mensaje">Mensaje</label> <div class="message-input"><input type="text" aria-label="Mensaje"/> <br /></div>
         <button class="send-button">Enviar</button>
       </form>
     </footer>
