--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
               target="_blank"
               alt="Twitter"
               ><img src="images/twitter.png"
-            /></a>
+            /> <p class="social-link-text">Twitter</p></a>
           </li>
           <li>
             <a href="https://github.com/diazgdev/" target="_blank" alt="Github"
               ><img src="images/github-logo.png"
-            /></a>
+            /> <p class="social-link-text">Github</p></a>
           </li>
           <li>
             <a
@@ -58,7 +58,7 @@
               target="_blank"
               alt="LinkedIn"
               ><img src="images/linkedin.png"
-            /></a>
+            /> <p class="social-link-text">LinkedIn</p></a>
           </li>
         </ul>
       </section>
