--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section>
         <h2 class="header">Mis proyectos</h2>
         <div class="carousel">
-          <div class="arrow arrow-left" aria-label="Izquierda"></div>
+          <button class="arrow arrow-left" aria-label="Izquierda"></button>
           <div class="window">
             <ul class="project-container">
               <li><button><img class="project project1" src="./images/project1.png" alt="Proyecto 1"></button></li>
@@ -75,7 +75,7 @@
               <li aria-hidden="true"><button><img class="project project5" src="./images/project5.png" alt="Proyecto 5"></button></li>
             </ul>
           </div>
-          <div class="arrow arrow-right" aria-label="Derecha"></div>
+          <button class="arrow arrow-right" aria-label="Derecha"></button>
         </div>
       </section>
     </main>
